# robotic-arm

./: .clang-format  .clangd  .gitignore  .mxproject  CMakeLists.txt  STM32F407XX_FLASH.ld  generate_trajectory_h.py  jdb.jdebug  robotic_arm.code-workspace  robotic_arm.ept  robotic_arm.ioc
.eide/: eide.yml
Core/Inc/: stm32f4xx_hal_conf.h  stm32f4xx_it.h
Core/Src/: can.c  dma.c  freertos.c  gpio.c  main.c  stm32f4xx_it.c  tim.c  usart.c
UserCode/: CMakeLists.txt
UserCode/app/: app.cpp  app.cpp.old  app.h  arm_ctrl_demo.cpp  serial_arm_ctrl_demo.cpp  serial_arm_ctrl_demo.cpp.dis  test_dm.cpp  test_dm.cpp.bak  trajectory.h  tune_pid.cpp.dis  tune_unitree_pid.cpp
UserCode/controller/: arm_ctrl.cpp  arm_ctrl.h  dual_arm_ctrl.cpp  dual_arm_ctrl.h
UserCode/drivers/: DJI.c  DJI.h  DM.c  DM.h  GO-M8010-6.c  Unitree_user.c  Unitree_user.h  unitree_motor.c  unitree_motor.h  xgzp6847d.cpp  xgzp6847d.h
UserCode/interfaces/: arm_motor_if.cpp  arm_motor_if.h  arm_motor_mit.cpp  arm_motor_mit.h
UserCode/libs/: crc_ccitt.h  pid_pd.c  pid_pd.h  rrt_star_planner.c  rrt_star_planner.h  s_curve.c  s_curve.h
cmake/stm32cubemx/: CMakeLists.txt
